Spacing issue with events cards on mobile

--- a/wp-content/themes/make-learn/scss/panels.scss
+++ b/wp-content/themes/make-learn/scss/panels.scss
@@ -26,7 +26,8 @@
 
 .make-card, .make-panel  {
 	border: solid 1px #979797;
-	display: block;
+	display: flex;
+	flex-direction: column;
 	color: #fff;
 	font-size: 20px;
 	text-decoration: none;
@@ -59,19 +60,21 @@
 		border: solid 2px #00AEEF;
 	}
 }
+.make-panel { display: block; }
 
 .make-card {
 	@media screen and (max-width: 767px) {
-		max-height: 135px;
+		flex-direction: row;
+		max-height: 133px;
 		.image-crop {
-			float: left;
 			margin-right: 15px;
-			width: 40%;
+			min-width: 40%;
+			max-width: 40%;
 			max-height: 130px;
 			margin-bottom: -10px;
 		}
 		.column-info {
-			font-size: 18px;
+			font-size: 16px;
 			text-align: left;
 			.column-title {
 				margin-top: 10px;
